--- a/views/polls/view.ejs
+++ b/views/polls/view.ejs
@@ -80,12 +80,12 @@
 
                         <div class="flex flex-col space-y-4" id="pollOptions">
                             <% poll.options.forEach((option, index) => { %>
-                                <button id="option-<%= index %>" class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between <% if (userVote.option === option) { %> !bg-primary text-white <% } %>"
+                                <button id="option-<%= index %>" class="poll-option bg-white border rounded p-4 cursor-pointer transition duration-300 ease-in-out flex justify-between <% if (userVote?.option === option) { %> !bg-primary text-white <% } %>"
                                     onclick="selectOption('<%= poll._id %>', '<%= option %>', '<%= index %>')">
                                     <span>
                                         <%= option %>
                                     </span>
-                                    <span>(<%= optionVotes[option].count %> votes)</span>
+                                    <span>(<%= optionVotes[option].count %> vote<% if (optionVotes[option].count !== 1) { %>s<% } %>)</span>
                                 </button>
                                 <% }) %>
 
