--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -5,12 +5,15 @@
   <title>
     <%= title %>
   </title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="/js/tailwind.js"></script>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="/js/tailwind.js"></script>
 
   <style type="text/tailwindcss">
     @layer utilities {
