UPDATE: setup node events to enforce SRP when handling jobs

--- a/views/emails/password-reset.handlebars
+++ b/views/emails/password-reset.handlebars
@@ -1,5 +1,6 @@
 <h1 style="color: #590D82;">Password Reset</h1>
 
+<p>Hi <strong>{{ username }}</strong>,</p>
 <p>You requested a password reset.</p>
 
 <p>Click this <a href="{{ link }}" style="color: #F25D9C;">link</a> to set a new password.</p>
