UPDATE: send welcome email upon user registration

--- a/views/emails/layouts/main.handlebars
+++ b/views/emails/layouts/main.handlebars
@@ -50,6 +50,27 @@
     a:hover {
       text-decoration: underline;
     }
+
+    /* styles added to the existing internal CSS in the layout */
+
+.features {
+  margin-top: 20px;
+}
+
+.features h2 {
+  color: #590D82;
+  margin-bottom: 10px;
+}
+
+.features ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.features li {
+  margin-bottom: 8px;
+}
+
   </style>
 </head>
 
