UPDATE: modularize agenda code implemementation

--- a/views/emails/welcome.handlebars
+++ b/views/emails/welcome.handlebars
@@ -1,6 +1,8 @@
-<h1>Welcome to PinVote, {{ username }}!</h1>
+<h1>Welcome to PinVote</h1>
 
-<p>We're thrilled to have you join our community of active poll participants. PinVote is a real-time polling app designed to make your polling experience seamless and enjoyable.</p>
+<p>Hi <strong>{{ username }},</strong></p>
+<p>We're thrilled to have you join our community of active poll participants. PinVote is a real-time polling app
+  designed to make your polling experience seamless and enjoyable.</p>
 
 <div class="features">
   <h2>Key Features:</h2>
