--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -12,6 +12,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7767ZFVKQF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-7767ZFVKQF');
+  </script>
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="/js/tailwind.js"></script>
 
@@ -57,6 +67,6 @@
       }
     </style>
 
-    <script src="/js/post-data.js"></script>
-    <script src="/js/utilities.js"></script>
+  <script src="/js/post-data.js"></script>
+  <script src="/js/utilities.js"></script>
 </head>
