update: link to homepage from logo in auth pages

--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -3,7 +3,7 @@
 <body class="h-screen w-full overflow-none flex">
 
     <div class="w-1/2 bg-secondary h-full hidden md:flex flex-col space-y-10 items-center justify-center container py-10">
-        <img src="/images/password.svg" alt="Forgot Password" class="w-3/4">
+        <a href="/"><img src="/images/login.svg" alt="Login" class="w-3/4"></a>
 
         <h6 class="text-2xl font-bold text-primary">PinVote - Instant Votes</h6>
     </div>
