--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -4,7 +4,7 @@
 
         <div
             class="w-1/2 bg-secondary h-full hidden md:flex flex-col space-y-10 items-center justify-center container py-10">
-            <img src="/images/login.svg" alt="Login" class="w-3/4">
+            <a href="/"><img src="/images/login.svg" alt="Login" class="w-3/4"></a>
 
             <h6 class="text-2xl font-bold text-primary">PinVote - Instant Votes</h6>
         </div>
