--- a/views/auth/forgot-password.ejs
+++ b/views/auth/forgot-password.ejs
@@ -3,14 +3,14 @@
 <body class="h-screen w-full overflow-none flex">
 
     <div class="w-1/2 bg-secondary h-full hidden md:flex flex-col space-y-10 items-center justify-center container py-10">
-        <a href="/"><img src="/images/login.svg" alt="Login" class="w-3/4"></a>
+        <img src="/images/password.svg" alt="Forgot Password" class="w-3/4">
 
         <h6 class="text-2xl font-bold text-primary">PinVote - Instant Votes</h6>
     </div>
 
     <div class="block md:flex flex-col space-y-10 md:w-1/2 container py-4 md:py-10">
         <div class="flex md:justify-end items-center w-full">
-            <img src="/images/logo.svg" alt="PinVote" class="w-60">
+            <a href="/"><img src="/images/logo.svg" alt="PinVote" class="w-60"></a>
         </div>
 
         <div class="h-full flex pt-10 md:pt-0 md:items-center justify-center">
