update: display poll dates based on poll virtual status

--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -64,6 +64,22 @@
         .btn-secondary {
           @apply bg-secondary hover:bg-secondary/90 text-white !border-none focus:!ring-secondary
         }
+
+        .badge {
+          @apply inline-block py-1 px-3 rounded-full min-w-fit
+        }
+
+        .badge-primary {
+          @apply text-primary bg-primary/10
+        }
+
+        .badge-success {
+          @apply text-green-500 bg-green-500/10
+        }
+
+        .badge-danger {
+          @apply text-red-500 bg-red-500/10
+        }
       }
     </style>
 
