--- a/views/user/polls/index.ejs
+++ b/views/user/polls/index.ejs
@@ -35,7 +35,7 @@
                                                 <p class="text-sm font-light">Created <%= poll.createdAt.toDateString()
                                                         %>
                                                 </p>
-                                                <p class="text-sm font-light">Ends <%= poll.endDate %>
+                                                <p class="text-sm font-light">Ends <%= poll.endsAt %>
                                                 </p>
 
                                                 <div class="flex space-x-2 justify-end">
