--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -46,11 +46,19 @@
         }
 
         .form-control input {
-          @apply px-4 py-2 mt-1 border transition duration-200 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary w-full
+          @apply px-4 py-2 mt-1 inline-block border transition duration-200 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary w-full
         }
 
         .form-control select {
           @apply mt-1 block w-full bg-white border border-gray-300 rounded-full py-2 px-4 leading-tight focus:outline-none focus:border-primary focus:ring-2 focus:ring-offset-2 focus:ring-primary
+        }
+
+        .form-control button {
+          @apply inline-block
+        }
+
+        .form-group {
+          @apply flex space-x-4 items-center
         }
 
         .btn {
