--- a/views/polls/view.ejs
+++ b/views/polls/view.ejs
@@ -90,7 +90,7 @@
 
 
                     <div class="mt-8">
-                        <% if (poll.status === 'active' ) { %>
+                        <% if (poll.status !== 'active' ) { %>
                             <div class="flex flex-col space-y-4" id="pollOptions">
                             <% poll.options.forEach((option, index)=> { %>
 
