--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -3,14 +3,20 @@
 
     <div class="flex items-center space-x-4">
         <% if (!authenticated) { %>
-        <a href="/auth/create-account" class="btn btn-primary">Create account</a>
-        <a href="/auth/login" class="btn">Login</a>
-        <% } else { %>
-            <a href="/user/polls">My Dashboard</a>
-            <form action="/auth/logout" method="POST">
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button class="btn btn-primary">Logout</button>
-            </form>
-        <% } %>
+            <a href="/auth/create-account" class="btn btn-primary">
+                <span class="hidden sm:inline-block">Create account</span>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+                  </svg>
+                  
+            </a>
+            <a href="/auth/login" class="btn">Login</a>
+            <% } else { %>
+                <a href="/user/polls">My Dashboard</a>
+                <form action="/auth/logout" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <button class="btn btn-primary">Logout</button>
+                </form>
+                <% } %>
     </div>
 </nav>
