update: display notifications in navigation

--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -92,5 +92,5 @@
     </style>
 
   <script src="/js/post-data.js"></script>
-  <script src="/js/utilities.js"></script>
+  <script defer src="/js/utilities.js"></script>
 </head>
