--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -1,14 +1,16 @@
-<nav class="container flex justify-between items-center py-4">
+<nav class="container flex justify-between items-center py-4 relative">
     <a href="/"><img src="/images/logo.svg" alt="PinVote" class="w-60"></a>
 
     <div class="flex items-center space-x-4">
         <% if (!authenticated) { %>
             <a href="/auth/create-account" class="btn btn-primary">
                 <span class="hidden sm:inline-block">Create account</span>
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
-                  </svg>
-                  
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+                </svg>
+
             </a>
             <a href="/auth/login" class="btn">Login</a>
             <% } else { %>
@@ -18,5 +20,54 @@
                     <button class="btn btn-primary">Logout</button>
                 </form>
                 <% } %>
+
+                    <div>
+                        <button aria-label="Notifications" id="notification-dropdown-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+                            </svg>
+                        </button>
+
+                        <div id="notification-dropdown"
+                            class="absolute top-24 right-2 sm:right-10 bg-white rounded shadow p-4 max-w-xs transition-transform scale-0 space-y-2">
+                            <p class="text-xs font-semibold uppercase tracking-wider">Notifications</p>
+
+                            <% if (notifications.length===0) { %>
+                                <small>No notifications to show</small>
+                                <% } else { %>
+                                    <div class="max-h-80 overflow-auto">
+                                        <% for (let notification of notifications) { %>
+
+
+                                            <div class="w-full py-4 text-gray-500 border-b border-gray-200">
+                                                <div class="flex">
+                                                    <div
+                                                        class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg">
+                                                        <svg class="w-4 h-4" aria-hidden="true"
+                                                            xmlns="http://www.w3.org/2000/svg" fill="none"
+                                                            viewBox="0 0 18 20">
+                                                            <path stroke="currentColor" stroke-linecap="round"
+                                                                stroke-linejoin="round" stroke-width="2"
+                                                                d="M16 1v5h-5M2 19v-5h5m10-4a8 8 0 0 1-14.947 3.97M1 10a8 8 0 0 1 14.947-3.97" />
+                                                        </svg>
+                                                        <span class="sr-only">Refresh icon</span>
+                                                    </div>
+                                                    <div class="ms-3 text-sm font-normal">
+                                                        <span
+                                                            class="mb-1 text-sm font-semibold text-gray-900"><%= notification.data.title %></span>
+                                                        <div class="mb-2 text-sm font-normal"><%= notification.data.message %></div>
+                                                        <button class="text-green-500 text-xs">Mark as read &checkmark;</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+    
+    
+                                            <% } %>
+                                    </div>
+                                            <% } %>
+                        </div>
+                    </div>
     </div>
 </nav>
