--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -1,7 +1,7 @@
-<nav class="container flex justify-between items-center py-4 relative">
+<nav class="container flex justify-between items-center py-4 relative space-x-8">
     <a href="/"><img src="/images/logo.svg" alt="PinVote" class="w-60"></a>
 
-    <div class="flex items-center space-x-4">
+    <div class="flex items-center space-x-2 sm:space-x-4">
         <% if (!authenticated) { %>
             <a href="/auth/create-account" class="btn btn-primary">
                 <span class="hidden sm:inline-block">Create account</span>
@@ -14,24 +14,35 @@
             </a>
             <a href="/auth/login" class="btn">Login</a>
             <% } else { %>
-                <a href="/user/polls">My Dashboard</a>
+                <a href="/user/polls" aria-label="Dashboard">
+                    <span class="hidden sm:inline-block">My Dashboard</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 0 1 6 3.75h2.25A2.25 2.25 0 0 1 10.5 6v2.25a2.25 2.25 0 0 1-2.25 2.25H6a2.25 2.25 0 0 1-2.25-2.25V6ZM3.75 15.75A2.25 2.25 0 0 1 6 13.5h2.25a2.25 2.25 0 0 1 2.25 2.25V18a2.25 2.25 0 0 1-2.25 2.25H6A2.25 2.25 0 0 1 3.75 18v-2.25ZM13.5 6a2.25 2.25 0 0 1 2.25-2.25H18A2.25 2.25 0 0 1 20.25 6v2.25A2.25 2.25 0 0 1 18 10.5h-2.25a2.25 2.25 0 0 1-2.25-2.25V6ZM13.5 15.75a2.25 2.25 0 0 1 2.25-2.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-2.25A2.25 2.25 0 0 1 13.5 18v-2.25Z" />
+                      </svg>
+                      
+                </a>
                 <form action="/auth/logout" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <button class="btn btn-primary">Logout</button>
+                    <button class="btn btn-primary" aria-label="Logout">
+                        <span class="hidden sm:inline-block">Logout</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
+                          </svg>
+                          
+                    </button>
                 </form>
                 <% } %>
 
-                    <div>
-                        <button aria-label="Notifications" id="notification-dropdown-button">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-                            </svg>
-                        </button>
+                <button aria-label="Notifications" id="notification-dropdown-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+                    </svg>
+                </button>
 
                         <div id="notification-dropdown"
-                            class="absolute top-24 right-2 sm:right-10 bg-white rounded shadow p-4 max-w-xs transition-transform scale-0 space-y-2">
+                            class="absolute top-16 right-2 sm:right-10 bg-white rounded shadow p-4 max-w-xs transition-transform scale-0 space-y-2">
                             <p class="text-xs font-semibold uppercase tracking-wider">Notifications</p>
 
                             <% if (notifications.length===0) { %>
@@ -67,7 +78,6 @@
                                             <% } %>
                                     </div>
                                             <% } %>
-                        </div>
                     </div>
     </div>
 </nav>
