--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -42,7 +42,7 @@
                 </button>
 
                         <div id="notification-dropdown"
-                            class="absolute top-20 right-2 sm:right-10 bg-white rounded shadow p-4 max-w-xs transition-transform scale-0 space-y-2">
+                            class="absolute top-28 sm:top-20 right-2 sm:right-10 bg-white rounded shadow p-4 max-w-xs transition-transform scale-0 space-y-2">
                             <p class="text-xs font-semibold uppercase tracking-wider">Notifications</p>
 
                             <% if (notifications.length===0) { %>
