--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -66,10 +66,16 @@
                                                         <span class="sr-only">Refresh icon</span>
                                                     </div>
                                                     <div class="ms-3 text-sm font-normal">
-                                                        <span
-                                                            class="mb-1 text-sm font-semibold text-gray-900"><%= notification.data.title %></span>
-                                                        <div class="mb-2 text-sm font-normal"><%= notification.data.message %></div>
-                                                        <button class="text-green-500 text-xs">Mark as read &checkmark;</button>
+                                                        <p
+                                                            class="mb-1 text-sm font-semibold text-gray-900"><%= notification.data.title %></p>
+                                                        <p class="mb-2 text-sm font-normal"><%= notification.data.message %></p>
+                                                        <div class="flex justify-between items-center space-x-4">
+                                                            <small class="text-xs"><%= notification.createdAt %></small>
+
+                                                            <% if (!notification.readAt) { %>
+                                                                <button class="text-green-500 text-xs mark-notification-as-read" data-id="<%= notification._id %>">Mark as read &checkmark;</button>
+                                                            <% } %>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
