--- a/views/includes/guest/navigation.ejs
+++ b/views/includes/guest/navigation.ejs
@@ -16,74 +16,93 @@
             <% } else { %>
                 <a href="/user/polls" aria-label="Dashboard">
                     <span class="hidden sm:inline-block">My Dashboard</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6A2.25 2.25 0 0 1 6 3.75h2.25A2.25 2.25 0 0 1 10.5 6v2.25a2.25 2.25 0 0 1-2.25 2.25H6a2.25 2.25 0 0 1-2.25-2.25V6ZM3.75 15.75A2.25 2.25 0 0 1 6 13.5h2.25a2.25 2.25 0 0 1 2.25 2.25V18a2.25 2.25 0 0 1-2.25 2.25H6A2.25 2.25 0 0 1 3.75 18v-2.25ZM13.5 6a2.25 2.25 0 0 1 2.25-2.25H18A2.25 2.25 0 0 1 20.25 6v2.25A2.25 2.25 0 0 1 18 10.5h-2.25a2.25 2.25 0 0 1-2.25-2.25V6ZM13.5 15.75a2.25 2.25 0 0 1 2.25-2.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-2.25A2.25 2.25 0 0 1 13.5 18v-2.25Z" />
-                      </svg>
-                      
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M3.75 6A2.25 2.25 0 0 1 6 3.75h2.25A2.25 2.25 0 0 1 10.5 6v2.25a2.25 2.25 0 0 1-2.25 2.25H6a2.25 2.25 0 0 1-2.25-2.25V6ZM3.75 15.75A2.25 2.25 0 0 1 6 13.5h2.25a2.25 2.25 0 0 1 2.25 2.25V18a2.25 2.25 0 0 1-2.25 2.25H6A2.25 2.25 0 0 1 3.75 18v-2.25ZM13.5 6a2.25 2.25 0 0 1 2.25-2.25H18A2.25 2.25 0 0 1 20.25 6v2.25A2.25 2.25 0 0 1 18 10.5h-2.25a2.25 2.25 0 0 1-2.25-2.25V6ZM13.5 15.75a2.25 2.25 0 0 1 2.25-2.25H18a2.25 2.25 0 0 1 2.25 2.25V18A2.25 2.25 0 0 1 18 20.25h-2.25A2.25 2.25 0 0 1 13.5 18v-2.25Z" />
+                    </svg>
+
                 </a>
                 <form action="/auth/logout" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <button class="btn btn-primary" aria-label="Logout">
                         <span class="hidden sm:inline-block">Logout</span>
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
-                          </svg>
-                          
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6 inline-block sm:hidden">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9" />
+                        </svg>
+
                     </button>
                 </form>
                 <% } %>
 
-                <button aria-label="Notifications" id="notification-dropdown-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-                    </svg>
-                </button>
+                    <button aria-label="Notifications" id="notification-dropdown-button" class="relative">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+                        </svg>
 
-                        <div id="notification-dropdown"
-                            class="absolute top-28 sm:top-20 right-2 sm:right-10 bg-white rounded shadow p-4 max-w-xs transition-transform scale-0 space-y-2">
-                            <p class="text-xs font-semibold uppercase tracking-wider">Notifications</p>
+                        <% if (notificationsCount> 0) { %>
+                            <div
+                                class="absolute -top-2 -right-2 w-5 h-5 rounded-full flex items-center justify-center bg-green-500 text-white text-xs font-bold animate-pulse">
+                                <%= notificationsCount %>
+                            </div>
+                            <% } %>
+                    </button>
 
-                            <% if (notifications.length===0) { %>
-                                <small>No notifications to show</small>
-                                <% } else { %>
-                                    <div class="max-h-80 overflow-auto">
-                                        <% for (let notification of notifications) { %>
+                    <div id="notification-dropdown"
+                        class="absolute top-28 sm:top-20 right-2 sm:right-10 bg-white rounded shadow p-4 max-w-xs transition-transform scale-0 space-y-2 h-96 overflow-hidden">
+                        <p class="text-xs font-semibold uppercase tracking-wider">Notifications</p>
+
+                        <% if (notifications.length===0) { %>
+                            <small>No notifications to show</small>
+                            <% } else { %>
+                                <div class="h-80 overflow-auto">
+                                    <% for (let notification of notifications) { %>
 
 
-                                            <div class="w-full py-4 text-gray-500 border-b border-gray-200">
-                                                <div class="flex">
-                                                    <div
-                                                        class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg">
-                                                        <svg class="w-4 h-4" aria-hidden="true"
-                                                            xmlns="http://www.w3.org/2000/svg" fill="none"
-                                                            viewBox="0 0 18 20">
-                                                            <path stroke="currentColor" stroke-linecap="round"
-                                                                stroke-linejoin="round" stroke-width="2"
-                                                                d="M16 1v5h-5M2 19v-5h5m10-4a8 8 0 0 1-14.947 3.97M1 10a8 8 0 0 1 14.947-3.97" />
-                                                        </svg>
-                                                        <span class="sr-only">Refresh icon</span>
-                                                    </div>
-                                                    <div class="ms-3 text-sm font-normal">
-                                                        <p
-                                                            class="mb-1 text-sm font-semibold text-gray-900"><%= notification.data.title %></p>
-                                                        <p class="mb-2 text-sm font-normal"><%= notification.data.message %></p>
-                                                        <div class="flex justify-between items-center space-x-4">
-                                                            <small class="text-xs"><%= notification.createdAt %></small>
+                                        <div class="w-full py-4 text-gray-500 border-b border-gray-200">
+                                            <div class="flex">
+                                                <div
+                                                    class="inline-flex items-center justify-center flex-shrink-0 w-8 h-8 text-green-500 bg-green-100 rounded-lg">
+                                                    <svg class="w-4 h-4" aria-hidden="true"
+                                                        xmlns="http://www.w3.org/2000/svg" fill="none"
+                                                        viewBox="0 0 18 20">
+                                                        <path stroke="currentColor" stroke-linecap="round"
+                                                            stroke-linejoin="round" stroke-width="2"
+                                                            d="M16 1v5h-5M2 19v-5h5m10-4a8 8 0 0 1-14.947 3.97M1 10a8 8 0 0 1 14.947-3.97" />
+                                                    </svg>
+                                                    <span class="sr-only">Refresh icon</span>
+                                                </div>
+                                                <div class="ms-3 text-sm font-normal">
+                                                    <p class="mb-1 text-sm font-semibold text-gray-900">
+                                                        <%= notification.data.title %>
+                                                    </p>
+                                                    <p class="mb-2 text-sm font-normal">
+                                                        <%= notification.data.message %>
+                                                    </p>
+                                                    <div class="flex justify-between items-center space-x-4">
+                                                        <small class="text-xs">
+                                                            <%= notification.createdAt %>
+                                                        </small>
 
-                                                            <% if (!notification.readAt) { %>
-                                                                <button class="text-green-500 text-xs mark-notification-as-read" data-id="<%= notification._id %>">Mark as read &checkmark;</button>
+                                                        <% if (!notification.readAt) { %>
+                                                            <button
+                                                                class="text-green-500 text-xs mark-notification-as-read"
+                                                                data-id="<%= notification._id %>">Mark as read
+                                                                &checkmark;</button>
                                                             <% } %>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-    
-    
-                                            <% } %>
-                                    </div>
-                                            <% } %>
+                                        </div>
+
+
+                                        <% } %>
+                                </div>
+                                <% } %>
                     </div>
     </div>
 </nav>
