feat: setup websockets server and emit events from client listened on the server

--- a/views/includes/guest/header.ejs
+++ b/views/includes/guest/header.ejs
@@ -93,4 +93,6 @@
 
   <script src="/js/post-data.js"></script>
   <script defer src="/js/utilities.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/socket-client.js"></script>
 </head>
