--- a/views/includes/guest/footer.ejs
+++ b/views/includes/guest/footer.ejs
@@ -1,1 +1,4 @@
+<div id="notification-container" class="fixed z-50 w-2/3 md:w-1/3 lg:w-1/4 p-4 space-y- bottom-4 right-4 overflow-hidden">
+</div>
+
 </html>
